# openai-arm-quickstart-kits

./: .gitignore  LICENSE  README.md  install.py  install.sh  radxa_zero3_series  requirements.txt  setup.cfg
cli/: doctor.py  main.py  setup.py  update.py
openai_armdownload/: __init__.py  audio.py  chat.py  client.py  profile_loader.py  vision.py
profiles/: khadas_vim_series  not_here_most_likely  orange_pi_zero_series.json  raspberrypi4_series
templates/: chat_minimal.py  chat_streaming.py  config.py  speech_to_text.py
why-this-matters/: README.md  impact.md
