[metadata]
name = openai-arm-quickstart-kits
version = 0.1.0
author = namrah
description = Minimal AI toolkit for ARM boards with profiles, CLI, and templates.
license = MIT

[options]
packages = find:
install_requires =
    openai
    python-dotenv

[options.entry_points]
console_scripts =
    oaicli = cli.main:main
